<resources>
    <string name="app_name">Studio Ghibli Movies</string>

    <!-- MAIN ACTIVITY -->
    <string name="main_menu_lbl_sort">Sort movies</string>
    <string name="main_menu_lbl_settings">Settings</string>

    <!-- UPDATE DIALOG -->
    <string name="dialog_update_title">New version available</string>
    <string name="dialog_update_message">A new version of the app is available. Update to continue using it</string>
    <string name="dialog_update_btn_update">Update</string>

    <!-- MAINTENANCE DIALOG -->
    <string name="dialog_maintenance_title">Maintenance</string>
    <string name="dialog_maintenance_message">The app is under maintenance. Please, try again later</string>

    <!-- SETTINGS ACTIVITY -->
    <string name="settings_title">Settings</string>
    <string name="settings_lbl_version">App version: %1$s</string>
    <string name="settings_lbl_privacy_policy">Privacy policy</string>
    <string name="settings_lbl_contact">Contact</string>
    <string name="settings_lbl_contact_body">Do you want to contact with the developer of this app? Let\'s talk!</string>
    <string name="settings_lbl_paypal">Buy me a coffee</string>
    <string name="settings_lbl_paypal_body">Are you enjoying the app? I would appreciate a small support vía PayPal.</string>
    <string name="settings_lbl_translate_app_email_subject">Studio Ghibli Movies [%1$s]</string>
    <string name="settings_lbl_send_email">Send email</string>
    <string name="settings_lbl_error_no_email_client_found">There is no mail app installed</string>

    <!-- DETAIL FRAGMENT -->
    <string name="movie_detail_lbl_score">%1$d %%</string>
    <string name="movie_detail_lbl_running_time_hour_min">%1$dh %02$s min</string>
    <string name="movie_detail_lbl_running_time_min">%1$s min</string>
    <string name="movie_detail_lbl_likes">%1$d likes</string>
    <string name="movie_detail_error_cannot_update_like">Cannot update movie like</string>
    <string name="movie_detail_lbl_streaming_providers">Watch it on:</string>
    <string name="movie_detail_lbl_streaming_providers_flat_rate">Subscription</string>
    <string name="movie_detail_lbl_streaming_providers_rent">Rent</string>
    <string name="movie_detail_lbl_streaming_providers_buy">Buy</string>
    <string name="movie_detail_lbl_streaming_providers_not_available">Not available in %1$s :(</string>
    <string name="movie_detail_lbl_provided_by_just_watch">Provided by JustWatch</string>

    <!-- CUSTOM VIEWS -->
    <string name="view_empty_lbl_empty">There is nothing here</string>
    <string name="view_loading_lbl_loading">Loading, please wait</string>
    <string name="view_error_btn_try_again">Try again</string>

    <!-- SORT DIALOG -->
    <string name="dialog_sort_by_lbl_title">Sort by…</string>
    <string name="dialog_sort_by_lbl_name">Name - Default</string>
    <string name="dialog_sort_by_lbl_like">Like</string>
    <string name="dialog_sort_by_lbl_total_likes">Total likes</string>
    <string name="dialog_sort_by_lbl_score">Score</string>
    <string name="dialog_sort_by_lbl_director">Director</string>
    <string name="dialog_sort_by_lbl_year">Year</string>

    <!-- HANDLED ERROR  -->
    <string name="error_bbdd_get_movies">Cannot get movies from database</string>
    <string name="error_bbdd_get_movie_detail">Cannot get the movie detail</string>
    <string name="error_bbdd_insert_movies">Cannot save movies in database</string>
    <string name="error_bbdd_update_movie">Cannot update movie</string>
    <string name="error_network_unauthorized">You have not authorization to access to this resource</string>
    <string name="error_network_not_found">The resource not found</string>
    <string name="error_feature_not_implemented">Feature not implemented yet</string>
    <string name="error_network_no_connected">No internet connection</string>
    <string name="error_network_unknown">Error connecting with our servers</string>
    <string name="error_network_streaming_provider_not_found">Error getting streaming providers</string>

    <!-- DEFAULT ERROR -->
    <string name="default_error">Ops, something went wrong</string>

    <!-- DEFAULT TEXT -->
    <string name="retry">Retry</string>

</resources>