<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="16dp">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25"/>

    <ImageView
        android:id="@+id/img_error"
        android:layout_width="220dp"
        android:layout_height="220dp"
        app:layout_constraintTop_toTopOf="@id/guide_top"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@drawable/gif_error"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/lbl_message"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/BodyLargeTextStyle"
        app:layout_constraintTop_toBottomOf="@id/img_error"
        app:layout_constraintStart_toStartOf="@id/img_error"
        app:layout_constraintEnd_toEndOf="@id/img_error"
        android:gravity="center"
        android:text="@string/default_error" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_retry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view_error_btn_try_again"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/lbl_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>