<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:title="@string/settings_title"
            app:titleTextAppearance="@style/ToolbarStyle"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/app_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/app_info_iv_icon"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    app:srcCompat="@mipmap/ic_launcher"
                    app:shapeAppearance="@style/ShapeAppearance.Material3.Corner.Medium"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/app_info_tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:layout_constraintTop_toTopOf="@id/app_info_iv_icon"
                    app:layout_constraintStart_toEndOf="@id/app_info_iv_icon"
                    app:layout_constraintBottom_toTopOf="@id/app_info_tv_version"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:text="@string/app_name"/>

                <TextView
                    android:id="@+id/app_info_tv_version"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/app_info_tv_name"
                    app:layout_constraintStart_toStartOf="@id/app_info_tv_name"
                    app:layout_constraintEnd_toEndOf="@id/app_info_tv_name"
                    app:layout_constraintBottom_toBottomOf="@id/app_info_iv_icon"
                    android:textAppearance="@style/TextAppearance.Material3.TitleSmall"
                    android:text="@string/settings_lbl_version"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_other"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                app:cardElevation="0dp"
                app:cardCornerRadius="4dp"
                app:layout_constraintTop_toBottomOf="@id/app_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="12dp">

                        <ImageView
                            android:id="@+id/contact_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:src="@drawable/ic_email"
                            android:scaleType="center"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:id="@+id/contact_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/contact_image"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginStart="16dp"
                            android:gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:text="@string/settings_lbl_contact"/>

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/contact_title"
                            app:layout_constraintStart_toStartOf="@id/contact_title"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                            android:text="@string/settings_lbl_contact_body" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/layout_contact_divider"
                        android:background="@color/md_theme_surfaceDim"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_paypal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="12dp">

                        <ImageView
                            android:id="@+id/paypal_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            android:src="@drawable/ic_coffee"
                            android:scaleType="center"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:id="@+id/paypal_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/paypal_image"
                            app:layout_constraintEnd_toEndOf="parent"
                            android:layout_marginStart="16dp"
                            android:gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:text="@string/settings_lbl_paypal" />

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toBottomOf="@id/paypal_title"
                            app:layout_constraintStart_toStartOf="@id/paypal_title"
                            app:layout_constraintEnd_toEndOf="@id/paypal_title"
                            android:gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                            android:text="@string/settings_lbl_paypal_body" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <View
                        android:id="@+id/layout_paypal_divider"
                        android:background="@color/md_theme_surfaceDim"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"/>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/layout_privacy_policy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:minHeight="48dp"
                        android:gravity="center_vertical"
                        android:orientation="vertical"
                        android:paddingHorizontal="16dp"
                        android:paddingVertical="8dp">

                        <ImageView
                            android:id="@+id/privacy_policy_image"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:src="@drawable/ic_policy"
                            android:scaleType="center"
                            android:contentDescription="@string/app_name" />

                        <TextView
                            android:id="@+id/privacy_policy_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/privacy_policy_image"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent"
                            android:gravity="center_vertical"
                            android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
                            android:text="@string/settings_lbl_privacy_policy"
                            android:paddingStart="16dp"
                            android:paddingEnd="16dp"/>

                    </androidx.constraintlayout.widget.ConstraintLayout>



                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>