<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="56dp">

                <ImageView
                    android:id="@+id/img_banner"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintDimensionRatio="W,1:1.75"
                    tools:src="@drawable/img_banner" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/header_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    app:layout_constraintTop_toBottomOf="@id/img_banner"
                    app:layout_constraintStart_toStartOf="parent">

                    <ImageView
                        android:id="@+id/img_image"
                        android:layout_width="72dp"
                        android:layout_height="108dp"
                        android:scaleType="fitCenter"
                        tools:src="@drawable/img_title"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:contentDescription="@string/app_name" />

                    <TextView
                        android:id="@+id/lbl_title"
                        android:layout_width="0dp"
                        style="@style/TitleLargeTextStyle"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@id/img_image"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginStart="12dp"
                        tools:text="Gake no ue no Ponyo"/>

                    <TextView
                        android:id="@+id/lbl_director"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="0dp"
                        style="@style/BodyLargeTextStyle"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/lbl_title"
                        app:layout_constraintTop_toBottomOf="@id/lbl_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="2dp"
                        tools:text="Hayao Miyazaki" />

                    <TextView
                        android:id="@+id/lbl_year"
                        android:textAppearance="@style/TextAppearance.Material3.BodySmall"
                        android:layout_width="0dp"
                        style="@style/BodySmallTextStyle"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="@id/lbl_director"
                        app:layout_constraintTop_toBottomOf="@id/lbl_director"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginTop="2dp"
                        tools:text="2002" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/data_view"
                    style="?attr/materialCardViewElevatedStyle"
                    app:layout_constraintTop_toBottomOf="@+id/header_view"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="4dp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp">

                        <TextView
                            android:id="@+id/lbl_score"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            style="@style/LabelLargeTextStyle"
                            app:drawableTopCompat="@drawable/ic_score"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toStartOf="@id/lbl_running_time"
                            tools:text="92 %" />

                        <TextView
                            android:id="@+id/lbl_running_time"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            style="@style/LabelLargeTextStyle"
                            app:drawableTopCompat="@drawable/ic_running_time"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/lbl_score"
                            app:layout_constraintEnd_toStartOf="@id/lbl_like"
                            tools:text="109 min" />

                        <TextView
                            android:id="@+id/lbl_like"
                            android:textAppearance="@style/TextAppearance.Material3.LabelLarge"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            style="@style/LabelLargeTextStyle"
                            app:drawableTopCompat="@drawable/ic_like"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toEndOf="@id/lbl_running_time"
                            app:layout_constraintEnd_toEndOf="parent"
                            tools:text="976 likes" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <TextView
                    android:id="@+id/lbl_description"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:layout_width="0dp"
                    style="@style/BodyLargeTextStyle"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/data_view"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_margin="16dp"
                    tools:text="The son of a sailor, 5-year old Sosuke lives a quiet life on an oceanside cliff with his mother Lisa. One fateful day, he finds a beautiful goldfish trapped in a bottle on the beach and upon rescuing her, names her Ponyo. But she is no ordinary goldfish. The daughter of a masterful wizard and a sea goddess, Ponyo uses her father's magic to transform herself into a young girl and quickly falls in love with Sosuke, but the use of such powerful sorcery causes a dangerous imbalance in the world. As the moon steadily draws nearer to the earth and Ponyo's father sends the ocean's mighty waves to find his daughter, the two children embark on an adventure of a lifetime to save the world and fulfill Ponyo's dreams of becoming human." />

                <TextView
                    android:id="@+id/lbl_streaming_providers"
                    style="@style/TitleLargeTextStyle"
                    android:layout_width="0dp"
                    android:text="@string/movie_detail_lbl_streaming_providers"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_description"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginTop="28dp" />

                <RelativeLayout
                    android:id="@+id/layout_streaming_providers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/lbl_streaming_providers"
                    app:layout_constraintEnd_toEndOf="parent">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/recycler_streaming_providers"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        android:paddingHorizontal="16dp"
                        android:clipToPadding="false"
                        android:layout_marginTop="8dp"
                        tools:listitem="@layout/item_streaming_provider"/>

                    <TextView
                        android:id="@+id/lbl_streaming_providers_not_available"
                        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                        android:layout_width="match_parent"
                        style="@style/BodyLargeTextStyle"
                        android:layout_height="wrap_content"
                        android:layout_margin="16dp"
                        android:textColor="@color/md_theme_onPrimaryContainer"
                        android:text="@string/movie_detail_lbl_streaming_provider_not_available"
                        android:visibility="gone"/>

                </RelativeLayout>

                <TextView
                    android:id="@+id/lbl_provided_by_just_watch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/layout_streaming_providers"
                    app:layout_constraintStart_toStartOf="parent"
                    style="@style/BodySmallTextStyle"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    android:text="@string/movie_detail_lbl_provided_by_just_watch"/>

                <ImageView
                    android:id="@+id/img_provided_by_just_watch"
                    android:layout_width="0dp"
                    android:layout_height="16dp"
                    android:contentDescription="@string/app_name"
                    app:layout_constraintTop_toBottomOf="@id/lbl_provided_by_just_watch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintDimensionRatio="13859 : 2246"
                    android:layout_marginTop="6dp"
                    android:layout_marginHorizontal="16dp"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_justwatch_logo" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>